--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "backend for online info system",
+  "description": "backend for online edu system",
   "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.6.3",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "prettier": "^2.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
