--- a/server/.pre-commit-config.yaml
+++ b/server/.pre-commit-config.yaml
@@ -8,3 +8,7 @@ repos:
           - id: end-of-file-fixer
           - id: check-yaml
           - id: check-added-large-files
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: 9479d2357db4ed11984e3a6517c1559ca5655b4a
+      hooks:
+          - id: prettier
