--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,6 +1,4 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+  "trailingComma": "none",
+  "printWidth": 120
 }
