--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,5 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
