--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "joi": "^17.6.3",
     "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
