--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose-unique-validator": "^1.0.6",
     "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.6.3",
     "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
