--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,6 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Install modules
-              run: npm install
+              run: cd server; npm install
             - name: Run tests
-              run: npm test
+              run: cd server; npm test
