--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             # set environment variables
-            - name: Set environment variables
-              run: export MONGO_TEST_URL= ${{ secrets.MONGO_TEST_URL }}
             - uses: actions/checkout@v2
             - name: Install modules
               run: cd server; npm install
-            - name: Run tests
+            - name: Run test
+              env:
+                  MONGO_TEST_URL: ${{ secrets.MONGO_TEST_URL }}
               run: cd server; npm test
