--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "backend for online edu system",
     "main": "src/server.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "node build/server.js ",
         "build": "rm -rf build/ && tsc"
     },
@@ -18,10 +18,19 @@
         "joi": "^17.6.3",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "ts-node": "^10.9.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.19.6",
+        "@babel/preset-env": "^7.19.4",
+        "@babel/preset-typescript": "^7.18.6",
+        "@faker-js/faker": "^7.6.0",
         "@types/express": "^4.17.14",
+        "@types/faker": "^6.6.9",
+        "babel-jest": "^29.2.1",
+        "jest": "^29.2.1",
+        "ts-jest": "^29.0.3",
         "typescript": "^4.8.4"
     }
 }
