--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "chalk": "^4.1.2",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "fuzzy-search": "^3.2.1",
         "joi": "^17.6.3",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
@@ -28,6 +29,8 @@
         "@faker-js/faker": "^7.6.0",
         "@types/express": "^4.17.14",
         "@types/faker": "^6.6.9",
+        "@types/fuzzy-search": "^2.1.2",
+        "@types/jest": "^29.2.0",
         "babel-jest": "^29.2.1",
         "jest": "^29.2.1",
         "ts-jest": "^29.0.3",
