--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@adminjs/express": "^5.0.1",
+        "@adminjs/mongoose": "^3.0.0",
         "@types/mongoose-unique-validator": "^1.0.6",
+        "adminjs": "^6.4.1",
+        "bcrypt": "^5.1.0",
         "chalk": "^4.1.2",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -29,7 +33,6 @@
         "@faker-js/faker": "^7.6.0",
         "@types/express": "^4.17.14",
         "@types/faker": "^6.6.9",
-        "@types/fuzzy-search": "^2.1.2",
         "@types/jest": "^29.2.0",
         "babel-jest": "^29.2.1",
         "jest": "^29.2.1",
