--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "fuzzy-search": "^3.2.1",
+        "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
