--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "backend for online edu system",
     "main": "src/start.ts",
     "scripts": {
-        "test": "jest",
+        "test": "jest -i",
         "start": "node build/start.js ",
         "build": "rm -rf build/ && tsc"
     },
@@ -22,6 +22,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "fuzzy-search": "^3.2.1",
+        "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
