--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
+        "supertest": "^6.3.0",
         "request": "^2.81.0",
         "ts-node": "^10.9.1"
     },
