--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@chakra-ui/react": "^2.3.6",
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
         "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +16,7 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
+        "framer-motion": "^7.6.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
