--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
+        "react-star-ratings": "^2.3.0",
         "styled-components": "^5.3.6",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
@@ -44,5 +45,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-star-ratings": "^2.3.0"
     }
 }
