--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
         "axios": "^1.1.3",
         "bcrypt": "^5.1.0",
         "chalk": "^4.1.2",
+        "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "fuzzy-search": "^3.2.1",
@@ -27,8 +29,9 @@
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
-        "supertest": "^6.3.0",
         "request": "^2.81.0",
+        "superagent": "^8.0.3",
+        "supertest": "^6.3.0",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
@@ -37,6 +40,8 @@
         "@babel/preset-typescript": "^7.18.6",
         "@faker-js/faker": "^7.6.0",
         "@types/axios": "^0.14.0",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/cookie-session": "^2.0.44",
         "@types/express": "^4.17.14",
         "@types/faker": "^6.6.9",
         "@types/jest": "^29.2.0",
