--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
         "@testing-library/jest-dom": "^5.16.5",
@@ -13,10 +15,12 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
+        "axios": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
+        "react-world-flags": "^1.5.1",
         "styled-components": "^5.3.6",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
@@ -44,5 +48,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-world-flags": "^1.4.2"
     }
 }
