--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "@types/styled-components": "^5.1.26",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-star-ratings": "^2.3.0",
