--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
         "chalk": "^4.1.2",
         "cookie-parser": "^1.4.6",
         "cookie-session": "^2.0.0",
+        "cors": "^2.8.5",
+        "cros": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "fuzzy-search": "^3.2.1",
