--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
+        "axios": "^1.1.3",
         "framer-motion": "^7.6.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
