--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,11 @@
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
         "axios": "^1.1.3",
+        "dotenv": "^16.0.3",
         "framer-motion": "^7.6.1",
+        "fs": "^0.0.1-security",
+        "os": "^0.1.2",
+        "path": "^0.12.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
