--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
+        "bootstrap": "^5.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
