Add course content page (#58)
* feat: add course accordion

* refactor: extract lesson props interface

* feat: add CourseContent component

* refactor: remove package.json

--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
+        "bootstrap": "^5.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-star-ratings": "^2.3.0",
