--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
         "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +15,7 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
+        "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -20,6 +23,7 @@
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-star-ratings": "^2.3.0",
+        "react-world-flags": "^1.5.1",
         "styled-components": "^5.3.6",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
@@ -49,6 +53,7 @@
         ]
     },
     "devDependencies": {
-        "@types/react-star-ratings": "^2.3.0"
+        "@types/react-star-ratings": "^2.3.0",
+        "@types/react-world-flags": "^1.4.2"
     }
 }
