--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@adminjs/design-system": "^3.1.0",
         "@adminjs/express": "^5.0.1",
         "@adminjs/mongoose": "^3.0.0",
         "@types/fuzzy-search": "^2.1.2",
         "@types/mongoose-unique-validator": "^1.0.6",
+        "@types/styled-components": "^5.1.26",
         "adminjs": "^6.4.1",
         "axios": "^1.1.3",
         "bcrypt": "^5.1.0",
@@ -34,6 +36,7 @@
         "request": "^2.81.0",
         "superagent": "^8.0.3",
         "supertest": "^6.3.0",
+        "styled-components": "^5.3.6",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
