--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@chakra-ui/react": "^2.3.6",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.10",
@@ -16,6 +17,11 @@
         "@types/react-dom": "^18.0.7",
         "@types/styled-components": "^5.1.26",
         "axios": "^1.1.3",
+        "dotenv": "^16.0.3",
+        "framer-motion": "^7.6.1",
+        "fs": "^0.0.1-security",
+        "os": "^0.1.2",
+        "path": "^0.12.7",
         "bootstrap": "^5.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
