--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@adminjs/express": "^5.0.1",
         "@adminjs/mongoose": "^3.0.0",
+        "@imranbarbhuiya/mongoose-fuzzy-searching": "^3.0.5",
         "@types/fuzzy-search": "^2.1.2",
         "@types/mongoose-unique-validator": "^1.0.6",
         "adminjs": "^6.4.1",
@@ -21,15 +22,17 @@
         "chalk": "^4.1.2",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-formidable": "^1.2.0",
         "fuzzy-search": "^3.2.1",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
-        "supertest": "^6.3.0",
         "request": "^2.81.0",
-        "ts-node": "^10.9.1"
+        "supertest": "^6.3.0",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.19.6",
