--- a/server/package.json
+++ b/server/package.json
@@ -36,16 +36,15 @@
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
         "request": "^2.81.0",
-        "supertest": "^6.3.0",
-        "ts-node": "^10.9.1",
-        "tslib": "^2.4.0",
         "superagent": "^8.0.3",
         "supertest": "^6.3.0",
         "styled-components": "^5.3.6",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.19.6",
+        "@babel/plugin-transform-modules-commonjs": "^7.19.6",
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-typescript": "^7.18.6",
         "@faker-js/faker": "^7.6.0",
