--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-formidable": "^1.2.0",
+        "express-session": "^1.17.3",
         "fuzzy-search": "^3.2.1",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
@@ -36,9 +37,9 @@
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
         "request": "^2.81.0",
+        "styled-components": "^5.3.6",
         "superagent": "^8.0.3",
         "supertest": "^6.3.0",
-        "styled-components": "^5.3.6",
         "ts-node": "^10.9.1",
         "tslib": "^2.4.0"
     },
