--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
     "private": true,
     "dependencies": {
         "@chakra-ui/react": "^2.3.6",
+        "@emotion/core": "^11.0.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
         "@testing-library/jest-dom": "^5.16.5",
