--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
 MONGO_URL=mongodb://localhost:27017/yourdb
 MONGO_TEST_URL=mongodb://localhost:27017/
 SERVER_PORT=3000
+FRONT_END_URL=http://localhost:3000
