--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,7 +14,11 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitAny": true
     },
+    "rules": { "only-arrow-functions": true },
     "include": ["src"]
 }
