--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "bootstrap": "^5.2.2",
         "framer-motion": "^7.6.2",
         "fs": "^0.0.1-security",
+        "http-status-codes": "^2.2.0",
         "os": "^0.1.2",
         "path": "^0.12.7",
         "react": "^18.2.0",
