--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
     "private": true,
     "dependencies": {
         "@chakra-ui/react": "^2.3.6",
+        "@emotion/core": "^11.0.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
         "@testing-library/jest-dom": "^5.16.5",
@@ -18,9 +20,9 @@
         "@types/styled-components": "^5.1.26",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
-        "dotenv": "^16.0.3",
         "framer-motion": "^7.6.2",
         "fs": "^0.0.1-security",
+        "http-status-codes": "^2.2.0",
         "os": "^0.1.2",
         "path": "^0.12.7",
         "react": "^18.2.0",
