--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
         "@adminjs/design-system": "^3.1.0",
         "@adminjs/express": "^5.0.1",
         "@adminjs/mongoose": "^3.0.0",
+        "@imranbarbhuiya/mongoose-fuzzy-searching": "^3.0.5",
         "@types/fuzzy-search": "^2.1.2",
         "@types/mongoose-unique-validator": "^1.0.6",
         "@types/styled-components": "^5.1.26",
@@ -27,6 +28,8 @@
         "cros": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-formidable": "^1.2.0",
+        "express-session": "^1.17.3",
         "fuzzy-search": "^3.2.1",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
@@ -34,13 +37,15 @@
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
         "request": "^2.81.0",
+        "styled-components": "^5.3.6",
         "superagent": "^8.0.3",
         "supertest": "^6.3.0",
-        "styled-components": "^5.3.6",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.19.6",
+        "@babel/plugin-transform-modules-commonjs": "^7.19.6",
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-typescript": "^7.18.6",
         "@faker-js/faker": "^7.6.0",
