--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,7 @@
         "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
         "strict": true /* Enable all strict type-checking options. */,
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+        "importHelpers": false /* Allow importing helper functions from tslib once per project, instead of including them per-file. */,
         "jsx": "react"
     },
     "include": ["src/**/*"]
