--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -2,7 +2,15 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@internals/pages": ["./src/pages/index.ts"]
+            "@internals/components": ["src/components"],
+            "@internals/config": ["src/config/config.ts"],
+            "@internals/contexts": ["src/contexts"],
+            "@internals/hooks": ["src/hooks"],
+            "@internals/media/*": ["src/media/*"],
+            "@internals/pages": ["src/pages"],
+            "@internals/pages/*": ["src/pages/*"],
+            "@internals/services": ["src/services"],
+            "@internals/types": ["src/types"]
         }
     }
 }
