--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "jest -i",
         "start": "node build/start.js ",
-        "build": "rm -rf build/ && tsc"
+        "build": "rm -rf build/ && tsc",
+        "generate-docs": "node src/swagger.ts"
     },
     "author": "",
     "license": "ISC",
@@ -31,6 +32,7 @@
         "express-formidable": "^1.2.0",
         "express-session": "^1.17.3",
         "fuzzy-search": "^3.2.1",
+        "glob": "^8.0.3",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
         "mongoose": "^6.6.5",
@@ -40,6 +42,9 @@
         "styled-components": "^5.3.6",
         "superagent": "^8.0.3",
         "supertest": "^6.3.0",
+        "swagger-autogen": "^2.22.0",
+        "swagger-jsdoc": "^6.2.5",
+        "swagger-ui-express": "^4.6.0",
         "ts-node": "^10.9.1",
         "tslib": "^2.4.0"
     },
@@ -54,9 +59,12 @@
         "@types/cookie-session": "^2.0.44",
         "@types/express": "^4.17.14",
         "@types/faker": "^6.6.9",
+        "@types/glob": "^8.0.0",
         "@types/jest": "^29.2.0",
         "@types/request": "^2.48.8",
         "@types/supertest": "^2.0.12",
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
         "babel-jest": "^29.2.1",
         "jest": "^29.2.1",
         "supertest": "^6.3.0",
