--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,5 +10,5 @@ jobs:
               run: cd server; npm install --legacy-peer-deps
             - name: Run test
               env:
-                  MONGO_TEST_URL: ${{ secrets.MONGO_TEST_URL }}
+                  MONGO_TEST_URL: ${{ secrets.MONGO_TEST_URL }}${{ github.run_id }}
               run: cd server; npm test
