--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
         "cookie-parser": "^1.4.6",
         "cookie-session": "^2.0.0",
         "cors": "^2.8.5",
+        "cron": "^2.1.0",
         "cros": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -57,6 +58,7 @@
         "@types/axios": "^0.14.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/cookie-session": "^2.0.44",
+        "@types/cron": "^2.0.0",
         "@types/express": "^4.17.14",
         "@types/faker": "^6.6.9",
         "@types/glob": "^8.0.0",
