--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
+        "@reduxjs/toolkit": "^1.9.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
         "@types/node": "^16.18.0",
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
+        "@types/react-redux": "^7.1.24",
         "@types/styled-components": "^5.1.26",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
@@ -29,10 +31,13 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-star-ratings": "^2.3.0",
         "react-world-flags": "^1.5.1",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.2",
         "styled-components": "^5.3.6",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
