--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "framer-motion": "^7.6.2",
         "fs": "^0.0.1-security",
         "http-status-codes": "^2.2.0",
+        "next-routes": "^1.4.2",
         "os": "^0.1.2",
         "path": "^0.12.7",
         "react": "^18.2.0",
@@ -32,13 +33,14 @@
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "react-star-ratings": "^2.3.0",
+        "react-url-modal": "^0.4.3",
         "react-world-flags": "^1.5.1",
         "styled-components": "^5.3.6",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "craco start",
+        "start": "GENERATE_SOURCEMAP=false craco start",
         "build": "craco build",
         "test": "craco test",
         "eject": "craco eject",
