refactor: redux and use import alias

--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -12,7 +12,7 @@
             "@internals/services": ["src/services"],
             "@internals/types": ["src/types"],
             "@internals/modals": ["src/components/modals"],
-            "@internals/store": ["src/store.ts"]
+            "@internals/redux": ["src/redux"]
         }
     }
 }
