Add course page header (#107)
* refactor: extract CoursePrice from CourseCard

* feat: add CourseHeader component

* refactor: update pages structure

* fix: remove hardcoded promotion

* feat: extract modals

* fix: no key prop error

* refactor: redux and use import alias

* fix: addCourse modal to rerender courseList

* fix: addLesson modal to rerender lessons list

* refactor: courseHeader to get course data from state

* style: update course header

--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -11,7 +11,8 @@
             "@internals/pages/*": ["src/pages/*"],
             "@internals/services": ["src/services"],
             "@internals/types": ["src/types"],
-            "@internals/store": ["src/store.ts"]
+            "@internals/modals": ["src/components/modals"],
+            "@internals/redux": ["src/redux"]
         }
     }
 }
