--- a/client/package.json
+++ b/client/package.json
@@ -67,5 +67,6 @@
         "@types/react-star-ratings": "^2.3.0",
         "@types/react-world-flags": "^1.4.2",
         "prettier": "2.8.0"
-    }
+    },
+    "proxy": "http://localhost:8080"
 }
