--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
         "glob": "^8.0.3",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "prettier": "^2.7.1",
@@ -56,6 +57,7 @@
         "@babel/preset-typescript": "^7.18.6",
         "@faker-js/faker": "^7.6.0",
         "@types/axios": "^0.14.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/cookie-session": "^2.0.44",
         "@types/cron": "^2.0.0",
@@ -63,6 +65,7 @@
         "@types/faker": "^6.6.9",
         "@types/glob": "^8.0.0",
         "@types/jest": "^29.2.0",
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/request": "^2.48.8",
         "@types/supertest": "^2.0.12",
         "@types/swagger-jsdoc": "^6.0.1",
