--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,5 @@
 MONGO_URL=mongodb://localhost:27017/yourdb
 MONGO_TEST_URL=mongodb://localhost:27017/
-SERVER_PORT=3000
+SERVER_PORT=8080
 FRONT_END_URL=http://localhost:3000
+JWT_SECRET=yoursecret
