feat: add forget password frontend and backend

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,13 @@
-MONGO_URL=mongodb://localhost:27017/yourdb
-MONGO_TEST_URL=mongodb://localhost:27017/
+MONGO_URL=
+MONGO_TEST_URL=
+
 SERVER_PORT=8080
 FRONT_END_URL=http://localhost:3000
-JWT_SECRET=yoursecret
+
+JWT_SECRET=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
+PASSWORD_RESET_EMAIL_FROM="Linear Depression | Password Reset"
