--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
         "@adminjs/express": "^5.0.1",
         "@adminjs/mongoose": "^3.0.0",
         "@imranbarbhuiya/mongoose-fuzzy-searching": "^3.0.5",
+        "@types/crypto-js": "^4.1.1",
         "@types/fuzzy-search": "^2.1.2",
         "@types/mongoose-unique-validator": "^1.0.6",
+        "@types/nodemailer": "^6.4.6",
         "@types/styled-components": "^5.1.26",
         "adminjs": "^6.4.1",
         "axios": "^1.1.3",
@@ -28,17 +30,20 @@
         "cors": "^2.8.5",
         "cron": "^2.1.0",
         "cros": "^1.0.1",
+        "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-formidable": "^1.2.0",
         "express-session": "^1.17.3",
         "fuzzy-search": "^3.2.1",
         "glob": "^8.0.3",
+        "handlebars": "^4.7.7",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
+        "nodemailer": "^6.8.0",
         "prettier": "^2.7.1",
         "request": "^2.81.0",
         "styled-components": "^5.3.6",
