refactor: password reset email

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,4 +10,5 @@ EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_USER=
 EMAIL_PASSWORD=
-PASSWORD_RESET_EMAIL_FROM="Linear Depression | Password Reset"
+PASSWORD_RESET_EMAIL_FROM="lineardepression@guc.com"
+PASSWORD_RESET_EMAIL_SUBJECT="Linear Depression | Password Reset"
