--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
         "redux-thunk": "^2.4.2",
         "styled-components": "^5.3.6",
         "typescript": "^4.8.4",
+        "universal-cookie": "^4.0.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
