--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,6 @@ jobs:
             - name: Run test
               env:
                   MONGO_TEST_URL: ${{ secrets.MONGO_TEST_URL }}{{ github.run_id }}?retryWrites=true&w=majority
+                  JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
               run: cd server; npm test
