--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.10.9",
+        "@mui/joy": "^5.0.0-alpha.57",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
         "@reduxjs/toolkit": "^1.9.0",
@@ -26,6 +27,7 @@
         "framer-motion": "^7.6.2",
         "fs": "^0.0.1-security",
         "http-status-codes": "^2.2.0",
+        "moment": "^2.29.4",
         "next-routes": "^1.4.2",
         "os": "^0.1.2",
         "path": "^0.12.7",
