--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,8 @@
         "strict": true /* Enable all strict type-checking options. */,
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
         "importHelpers": false /* Allow importing helper functions from tslib once per project, instead of including them per-file. */,
-        "jsx": "react"
+        "jsx": "react",
+        "resolveJsonModule": true
     },
     "include": ["src/**/*"]
 }
