--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-formidable": "^1.2.0",
+        "express-rate-limit": "^6.7.0",
         "express-session": "^1.17.3",
         "fuzzy-search": "^3.2.1",
         "glob": "^8.0.3",
