--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
         "jsonwebtoken": "^8.5.1",
+        "md-to-pdf": "^5.2.1",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "nodemailer": "^6.8.0",
