--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
         "@types/react-dom": "^18.0.7",
         "@types/react-redux": "^7.1.24",
         "@types/styled-components": "^5.1.26",
+        "@uiw/react-md-editor": "^3.20.0",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
         "framer-motion": "^7.6.2",
         "fs": "^0.0.1-security",
         "http-status-codes": "^2.2.0",
+        "md-html-to-pdf": "^4.1.11",
         "next-routes": "^1.4.2",
         "os": "^0.1.2",
         "path": "^0.12.7",
