feat: add login and refresh backend

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,12 @@ MONGO_TEST_URL=
 SERVER_PORT=8080
 FRONT_END_URL=http://localhost:3000
 
-JWT_SECRET=
+# recommended two different 64 random characters
+# generate with:
+# node -e "console.log(require('crypto').randomBytes(64).toString('hex'))" | pbcopy
+JWT_ACCESS_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_SECRET=
+
 
 EMAIL_HOST=
 EMAIL_PORT=
