--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
         "handlebars": "^4.7.7",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
+        "md-to-pdf": "^5.2.1",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
