--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
           - id: check-yaml
           - id: check-added-large-files
             exclude: package-lock.json
+            exclude_types: [otf]
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: 9479d2357db4ed11984e3a6517c1559ca5655b4a
       hooks:
