--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "nodemailer": "^6.8.0",
+        "pdfkit": "^0.13.0",
         "prettier": "^2.7.1",
         "request": "^2.88.2",
         "styled-components": "^5.3.6",
@@ -72,6 +73,7 @@
         "@types/glob": "^8.0.0",
         "@types/jest": "^29.2.0",
         "@types/jsonwebtoken": "^8.5.9",
+        "@types/pdfkit": "^0.12.8",
         "@types/request": "^2.48.8",
         "@types/supertest": "^2.0.12",
         "@types/swagger-jsdoc": "^6.0.1",
