--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,10 @@ FRONT_END_URL=http://localhost:3000
 
 # recommended two different 64 random characters
 # generate with:
+# on MacOS
 # node -e "console.log(require('crypto').randomBytes(64).toString('hex'))" | pbcopy
+# on linux
+# node -e "console.log(require('crypto').randomBytes(64).toString('hex'))" | xclip -sel clip
 JWT_ACCESS_TOKEN_SECRET=
 JWT_REFRESH_TOKEN_SECRET=
 
@@ -15,5 +18,4 @@ EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_USER=
 EMAIL_PASSWORD=
-PASSWORD_RESET_EMAIL_FROM="lineardepression@guc.com"
-PASSWORD_RESET_EMAIL_SUBJECT="Linear Depression | Password Reset"
+EMAIL_FROM="lineardepression@guc.com"
