--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,4 @@ repos:
       hooks:
           - id: prettier
             args: [--config, .prettierrc]
+            exclude: server/public/templates/*/*
