--- a/client/tsconfig.paths.json
+++ b/client/tsconfig.paths.json
@@ -14,7 +14,8 @@
             "@internals/modals": ["src/components/modals"],
             "@internals/redux": ["src/redux"],
             "@internals/api": ["src/api"],
-            "@internals/handlers": ["src/handlers"]
+            "@internals/handlers": ["src/handlers"],
+            "@internals/utils": ["src/utils"]
         }
     }
 }
