--- a/server/.env.example
+++ b/server/.env.example
@@ -17,3 +17,6 @@ EMAIL_USER=
 EMAIL_PASSWORD=
 PASSWORD_RESET_EMAIL_FROM="lineardepression@guc.com"
 PASSWORD_RESET_EMAIL_SUBJECT="Linear Depression | Password Reset"
+
+STRIPE_SECRET_KEY="sk_test_example" # contact Ahmed Nasser for the key
+STRIPE_WEBHOOK_SECRET="whsec_example" # enter your testing webhook secret here
