docs: how to setup stripe in dev mode

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_API_URL="http://localhost:8080"
-REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_example" # contact Ahmed Nasser for the key
+REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_example" # contact Ahmed Nasser for the key or use your own
