--- a/server/.env.example
+++ b/server/.env.example
@@ -18,4 +18,10 @@ EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_USER=
 EMAIL_PASSWORD=
+PASSWORD_RESET_EMAIL_FROM="lineardepression@guc.com"
+PASSWORD_RESET_EMAIL_SUBJECT="Linear Depression | Password Reset"
+
 EMAIL_FROM="lineardepression@guc.com"
+
+STRIPE_SECRET_KEY="sk_test_example" # contact Ahmed Nasser for the key or use your own
+STRIPE_WEBHOOK_SECRET="whsec_example" # enter your testing webhook secret here
