--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
         "pdfkit": "^0.13.0",
         "prettier": "^2.7.1",
         "request": "^2.88.2",
+        "stripe": "^11.5.0",
         "styled-components": "^5.3.6",
         "superagent": "^8.0.3",
         "supertest": "^6.3.0",
