--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@mui/lab": "^5.0.0-alpha.113",
         "@mui/material": "^5.10.10",
         "@mui/styled-engine-sc": "^5.10.6",
+        "@react-pdf-viewer/core": "^3.9.0",
         "@reduxjs/toolkit": "^1.9.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -34,6 +35,7 @@
         "next-routes": "^1.4.2",
         "os": "^0.1.2",
         "path": "^0.12.7",
+        "pdfjs-dist": "^3.1.81",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
