fix: broken requests in backend

--- a/server/.env.example
+++ b/server/.env.example
@@ -25,3 +25,7 @@ EMAIL_FROM="lineardepression@guc.com"
 
 STRIPE_SECRET_KEY="sk_test_example" # contact Ahmed Nasser for the key or use your own
 STRIPE_WEBHOOK_SECRET="whsec_example" # enter your testing webhook secret here
+
+ADMIN_COOKIE_NAME=
+ADMIN_COOKIE_PASSWORD=
+ADMIN_SESSION_SECRET=
