--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "@adminjs/mongoose": "^3.0.0",
         "@imranbarbhuiya/mongoose-fuzzy-searching": "^3.0.5",
         "@types/crypto-js": "^4.1.1",
+        "@types/express-session": "^1.17.5",
         "@types/fuzzy-search": "^2.1.2",
         "@types/mongoose-unique-validator": "^1.0.6",
         "@types/nodemailer": "^6.4.6",
@@ -35,14 +36,14 @@
         "express": "^4.18.2",
         "express-formidable": "^1.2.0",
         "express-rate-limit": "^6.7.0",
-        "express-session": "^1.17.3",
         "fuzzy-search": "^3.2.1",
         "glob": "^8.0.3",
         "handlebars": "^4.7.7",
         "http-status-codes": "^2.2.0",
         "joi": "^17.6.3",
-        "md-to-pdf": "^5.2.1",
         "jsonwebtoken": "^9.0.0",
+        "md-to-pdf": "^5.2.1",
+        "moment": "^2.29.4",
         "mongoose": "^6.6.5",
         "mongoose-unique-validator": "^3.1.0",
         "nodemailer": "^6.8.0",
@@ -70,7 +71,7 @@
         "@types/cookie-parser": "^1.4.3",
         "@types/cookie-session": "^2.0.44",
         "@types/cron": "^2.0.0",
-        "@types/express": "^4.17.14",
+        "@types/express": "^4.17.15",
         "@types/faker": "^6.6.9",
         "@types/glob": "^8.0.0",
         "@types/jest": "^29.2.0",
