--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
+        "react-loading-skeleton": "^3.1.0",
         "react-player": "^2.11.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.2",
