--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
         "test": "jest",
         "start": "node build/start.js ",
         "build": "rm -rf build/ && tsc",
-        "generate-docs": "node src/swagger.ts"
+        "generate-docs": "node src/swagger/swagger.ts"
     },
     "author": "",
     "license": "ISC",
